# sgs_tools

./: .gitignore  Makefile  README.md  TASKLIST.md  pyproject.toml  tox.ini
doc/: conf.py  geometry.rst  index.rst  io.rst  make.bat  physics.rst  scripts.rst  sgs.rst  simple_flow.rst
doc/.entangled/: sphinx_conf.py
scripts/: CS_calculation.py
scripts/analysis_py_scripts_pb/: compute_scalar_flux.py  compute_up_down_drafts.py  filters.py  flx_component_stats.py  main_scalar_flux.py  plot_results.py  readData.py  spectral_analysis.py
scripts/pburns/: define_vars.py  main_scalar_flux.py  plot_env.py  spectra_xarray.py
src/sgs_tools/: __init__.py
src/sgs_tools/geometry/: grid.py  staggered_grid.py  tensor_algebra.py  vector_calculus.py
src/sgs_tools/io/: um.py
src/sgs_tools/physics/: fields.py  staggered_grid.py  tensor_algebra.py  vector_calculus.py
src/sgs_tools/scripts/: CS_calculation.py  make_UM_level_sets.py
src/sgs_tools/sgs/: Smagorinsky.py  dynamic_coefficient.py  filter.py  sgs_model.py
src/sgs_tools/simple_flows/: SimpleShear.py
src/sgs_tools/util/: path_utils.py  timer.py
test/test_geometry/: test_staggered_grid.py
