[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SGS_tools"
version = "0.1.0"
description = "Python tools for sub-grid scale fluid analyis"
authors = [
    {name = "Dimtar Vlaykov", email = "d.vlaykov@exeter.ac.uk"},
]

#urls = {homepage = "https://bitbucket.org/git/pymusic/"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11"
]

requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.6",
    "xarray[io,accel,parallel]>=2023.9",
]

[project.optional-dependencies]
dev = [
    "tox",
    "mypy",
    "pytest"
]
doc = [
    "sphinx",
    "sphinx-mdinclude",
    "pydata-sphinx-theme"
]
# [tools.setuptools.package.find]
# namespace=false
# #exclude = "scripts"